[project]
name = "e-commerce-product-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "nng777",email = "nikodemusng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "http-client (>=0.1.22,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
